<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stop_session_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Controller.Fragments.StopSessionFragment">

    <TextView
        android:id="@+id/textViewSummary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RECALIBRATE BUTTON -->
    <ImageButton
        android:id="@+id/recalibrateButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/recalibrate_device"
        android:src="@drawable/synchronize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- MIDDLE BLOCKS -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSummary">

        <TextView
            android:id="@+id/textViewSessionTime"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:text="@string/session_runtime"
            android:textColor="@color/background_color"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSessionAverage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:text="@string/average_score"
            android:textColor="@color/background_color"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSessionTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- BOTTOM PORTION RESUME/FINISH -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutResumeFinish"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- RESUME BUTTON -->
        <Button
            android:id="@+id/resumeButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/background_color"
            android:text="@string/resume"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/finishButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- GO TO SAVE SESSION FRAGMENT -->
        <Button
            android:id="@+id/finishButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/background_color"
            android:text="@string/finish"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resumeButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>