<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save_session_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Controller.Fragments.SaveSessionFragment">

    <!-- TOP TEXT NAME OF FRAGMENT -->
    <TextView
        android:id="@+id/textViewSAVE"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:text="@string/save_fragment_name"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TO RESUME ACTIVITY -->
    <Button
        android:id="@+id/resumeButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/primary_dark"
        android:gravity="center"
        android:text="@string/resume"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- EDIT FIELDS -->
    <RelativeLayout
        android:id="@+id/relativeLayoutFields"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSAVE">

        <!-- NAME OF ACTIVITY -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_shape"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="@color/background_color"
            android:textColorHint="@color/background_color" />

        <Spinner
            android:id="@+id/activityTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/editTextName"
            android:layout_margin="20dp"
            android:background="@color/background_color"
            android:backgroundTint="@color/black"
            android:textStyle="bold"
            app:cornerRadius="20dp" />


        <!-- DESCRIPTION -->
        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/activityTypeSpinner"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_shape"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
            android:gravity="top"
            android:hint="@string/notes"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="15"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@color/background_color"
            android:textColorHint="@color/background_color" />

    </RelativeLayout>

    <!-- BOTTOM PORTION SAVE/DISCARD -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSaveDiscard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- ON SAVE -->
        <Button
            android:id="@+id/saveSessionButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/background_color"
            android:text="@string/save_session"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/discardSessionButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Discard Activity -->
        <Button
            android:id="@+id/discardSessionButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/background_color"
            android:text="@string/discard"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/saveSessionButton"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>